--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     background: cornflowerblue;
 }
 
-.heroSection {
+.hero-section {
     display: grid;
     grid-template-columns: repeat(3, 8rem);
     grid-gap: 2rem;
