--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: cornflowerblue;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(15,110,138,1) 35%, rgba(0,212,255,1) 100%);
 }
 
 .hero-section {
