--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,13 @@ button {
     padding-bottom: 1rem;
 }
 
+.scheme-section {
+    display: grid;
+    grid-template-columns: repeat(3, 8rem);
+    grid-gap: 1rem;
+    padding-bottom: 1rem;
+}
+
 .card {
     position: relative;
     background: coral;
